2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-tab.y (primary): Add location information for
	lambdas.

2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (INVALID_FIRST_OPERAND): Define.
	(INVALID_SECOND_OPERAND): Likewise.
	(pkl_typify1_ps_op_rela): Fix diagnostics.
	* testsuite/poke.pkl/eq-any-diag-1.pk: Adapt expected error.
	* testsuite/poke.pkl/neq-any-diag-1.pk: Likewise.
	* testsuite/poke.pkl/lt-functions-diag-1.pk: Likewise.
	* testsuite/poke.pkl/lt-arrays-diag-1.pk: Likewise.
	* testsuite/poke.pkl/le-functions-diag-1.pk: Likewise.
	* testsuite/poke.pkl/le-arrays-diag-1.pk: Likewise.
	* testsuite/poke.pkl/gt-functions-diag-1.pk: Likewise.
	* testsuite/poke.pkl/gt-arrays-diag-1.pk: Likewise.
	* testsuite/poke.pkl/ge-functions-diag-1.pk: Likewise.
	* testsuite/poke.pkl/ge-arrays-diag-1.pk: Likewise.

2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_op_not): Fix diagnostics.
	* testsuite/poke.pkl/not-diag-1.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Add new test.

2022-01-19  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Disallow
	labels in unions.
	* doc/poke.texi (Unions): Update.
	* testsuite/poke.pkl/union-diag-9.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/std.pk (openproc): New function.
	* doc/poke.texi (openproc): New section.

2022-01-18  Luca Saiu  <positron@gnu.org>

	* bootstrap.conf (bootstrap_post_import_hook): Use the specified
	--gnulib-srcdir for boostrapping Jitter as well: redefine
	GNULIB_SRCDIR to be an absolute path, then cd to the Jitter source
	directory and pass Gnulib's absolute path to Jitter's bootstrap
	script; do not rely on a hardwired --gnulib-srcdir=../gnulib .
	(bootstrap_post_import_hook): Add missing quotations when
	expanding GNULIB_SRCDIR and JITTER_SRCDIR.